# dalloc

./: CMakeLists.txt  README.md  libcheck.supp
src/: CMakeLists.txt  chunk.c  chunk.h  dalloc.c  dalloc.h  dalloc_config.c  dalloc_config.h  dalloc_config.h.in  dalloc_heap_traversal.c  dalloc_heap_traversal.h  dalloc_internal.c  dalloc_internal.h  dalloc_io.c  dalloc_io.h  dalloc_io_internal.h  dalloc_utils.c  dalloc_utils.h
test/: CMakeLists.txt  test.c  test_calloc.c  test_calloc.h  test_free.c  test_free.h  test_heap_manip.c  test_heap_manip.h  test_heap_traversal.c  test_heap_traversal.h  test_io.c  test_io.h  test_malloc.c  test_malloc.h  test_realloc.c  test_realloc.h  test_reallocarray.c  test_reallocarray.h  test_util.c  test_util.h  test_utils.c  test_utils.h
